--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
